--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 </head>
 <body>
     
-    <header></header>
+    <header>
+        <img src="" alt="">
+        <div>
+            <h1>La proxima revolucion en el intercambio de las criptomonedas</h1>
+            <p><Batatabits te ayuda a navegar entre los difernetes precos y tendencias/p>
+            <a href="">Conoce nuestros planes <span>iii</span></a>
+        </div>
+    </header>
     <main>
         <section></section>
         <section></section>
