--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <header>
         <img src="./assets/img/logo.svg" alt="">
         <div class="header--title--container">
-            <h1>La proxima revolucion en el intercambio de las criptomonedas</h1>
-            <p><Batatabits te ayuda a navegar entre los difernetes precos y tendencias/p>
+            <h1>La proxima revolucion en el intercambio de criptomonedas</h1>
+            <p>Batatabits te ayuda a navegar entre los difernetes precos y tendencias
+
+            </p>
             <a href="" class="header--button">Conoce nuestros planes <span>iii</span></a>
         </div>
     </header>
