--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p>Batatabits te ayuda a navegar entre los difernetes precos y tendencias
 
             </p>
-            <a href="" class="header--button">Conoce nuestros planes <span>iii</span></a>
+            <a href="" class="header--button">Conoce nuestros planes <span></span></a>
         </div>
     </header>
     <main>
