--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <table>
                             <tr>
                                 <td class="table__top-left">Bitcoin</td>
-                                <td class="table__top-right table__right">$ 1.96 <span></span> </td>
+                                <td class="table__top-right table__right">$ 1.96 <span class="down"></span> </td>
                             </tr>
                             <tr>
                                 <td>Ethereum</td>
