--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
                             </tr>
                             <tr>
                                 <td>Ethereum</td>
-                                <td class="table__right">$ 0.07 <span></span> </td>
+                                <td class="table__right">$ 0.07 <span class="up"></span> </td>
                             </tr>
                             <tr>
                                 <td>Ripple</td>
-                                <td class="table__right">$ 2.17 <span></span> </td>
+                                <td class="table__right">$ 2.17 <span class="down"></span> </td>
                             </tr>
                             <tr>
                                 <td class="table__bottom-left">Stellar</td>
-                                <td class="table__bottom-right table__right">$ 4.96 <span></span> </td>
+                                <td class="table__bottom-right table__right">$ 4.96 <span class="down"></span> </td>
                             </tr>
                         </table>
                     </div>
@@ -58,6 +58,40 @@
                 </div>
             </section>
         </section>
+
+        <div class="main-comission-table">
+
+            <p class="comission-table-title">Comisiones</p>
+
+            <div>
+                <table class="comission-table-container">
+                    <tr>
+                        <td class="top-left">Bitrade</td>
+                        <td class="table__right top-right">$ 12.96</td>
+                    </tr>
+                    <tr>
+                        <td>Bitpreco</td>
+                        <td class="table__right">$ 13.07</td>
+                    </tr>
+                    <tr>
+                        <td>Novadax</td>
+                        <td class="table__right">$ 13.15</td>
+                    </tr>
+                    <tr>
+                        <td class="bottom-left">Coinext</td>
+                        <td class="table__right bottom-right">$ 14.96</td>
+                    </tr>
+                </table>
+            </div>
+
+            <div class="comission-table-date">
+                <p>
+                   <b>Actualizado: </b> 19 Julio 23:45
+                </p>
+            </div>
+        </div>
+
+
         <section></section>
         <section></section>
         <section></section>
