--- a/index.html
+++ b/index.html
@@ -67,32 +67,44 @@
                 <table class="comission-table-container">
                     <tr>
                         <td class="top-left">Bitrade</td>
-                        <td class="table__right top-right">$ 12.96</td>
+                        <td class="table__right top-right">$ 12.96 <span class="up"></span></td>
                     </tr>
                     <tr>
                         <td>Bitpreco</td>
-                        <td class="table__right">$ 13.07</td>
+                        <td class="table__right">$ 13.07 <span class="up"></span></td>
                     </tr>
                     <tr>
                         <td>Novadax</td>
-                        <td class="table__right">$ 13.15</td>
+                        <td class="table__right">$ 13.15 <span class="down"></span></td>
                     </tr>
                     <tr>
                         <td class="bottom-left">Coinext</td>
-                        <td class="table__right bottom-right">$ 14.96</td>
+                        <td class="table__right bottom-right">$ 14.96 <span class="down"></span></td>
                     </tr>
                 </table>
             </div>
 
             <div class="comission-table-date">
-                <p>
-                   <b>Actualizado: </b> 19 Julio 23:45
-                </p>
+                <p><b>Actualizado: </b> 19 Julio a las 23:45</p>
             </div>
         </div>
 
-
-        <section></section>
+        <section class="main-product-detail">
+            <span class="product-detail--batata-logo"></span>
+            <div class="product-detail--title"> 
+                <h2>Creamos un prducto sin comparacion.</h2>
+                <p>Confiable y diseñado para su uso diario.</p>
+            </div>
+            <section class="product-cards--container">
+                <article class="product-detail--card">
+                    <span class="clock"></span>
+                    <p class="product--card-title">Tiempo real</p>
+                    <p class="product--card-body">Nuestra API toma informacion minuto a minito 
+                        sobre las tasas que determinan el comportamiento 
+                    </p>
+                </article>
+            </section>
+        </section>
         <section></section>
         <section></section>
     </main>
