--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/style.css" />
-    <link
-      rel="stylesheet"
-      href="./css/tablet.css"
-      media="(min-width: 1024px)"
-    />
+    <link rel="stylesheet" href="./css/tablet.css" media="(min-width: 1024px)"/>
   </head>
   <body>
     <header>
